tests/NormalTests/paczka1/fuzzy1/86621431.err
Error in line 9: 7pVw1edx S945 97,34
Error in line 10: 7pVw1edx S945 13,6
Error in line 14: nZY A16 -1,8
Error in line 5: nZY A16 6,0
